# Engineering-Project-2014-15

./: First Report - Engineering projects.docx  Group209 3D Anatomy Segmentation using Perceptual Computing.doc  Group209.pptx  Project Log Template.docx  Project Log.docx  README.md  avg_results.txt  pic1.psd  poster-shlomo_revision_24_4_15.pptx  poster_new_shlomo_revision_27_4_15.pptx  results_table.docx  sample.cpp  sh.exe.stackdump  ~$Group209.pptx  ~$oject Log.docx
ExampleSlicesVis/: ReadImageData.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
ExampleSlicesVis/Debug/: ReadImageData.ilk
ExampleSlicesVis/Test/: ReadImageData.cpp
ExampleSlicesVis/TestBin/: ALL_BUILD.vcxproj  CMakeCache.txt  cmake_install.cmake
Slicer/: UpgradeLog.htm  libs.txt
Slicer/Project3/x64/Debug/: CL.read.1.tlog  (+2 more)
Slicer/Slicer_SRC/: CMakeLists.txt  CrosshairFactory.cpp  CrosshairFactory.h  GrowCut.cpp  GrowCut.h  ImageGraphCut.cpp  ImageGraphCut.h  ImageGraphCut.hpp  LeapAbstractionLayer.cpp  LeapAbstractionLayer.h  MarchingCubes.cpp  MarchingCubes.h  ReadImageData.cpp  Segmenter.cpp  Segmenter.h  SlicerLeapListener.cpp  SlicerLeapListener.h  Slicerproperties.txt  Tumor.cpp  Tumor.h  constants.h  graph.txx  itkImageToVTKImageFilter.h  maxflow.txx  meshLeaksCorrection.cpp  meshLeaksCorrection.cxx  meshLeaksCorrection.h  meshLeaksCorrection_1.cxx  myVtkInteractorStyleImage.cpp  myVtkInteractorStyleImage.h  myVtkInteractorStyleImage3D.1.cpp  myVtkInteractorStyleImage3D.cpp  myVtkInteractorStyleImage3D.h
matlab_find_distributions/: compute_norm_on_data.m  function1.m  output.xls
(+54 files in other folders)
